@@ -44,6 +44,7 @@ samples/sample53.pl
 samples/sample54.pl
 samples/sample55.pl
 samples/sample56.pl
+samples/sample57.pl
 samples/sample61.pl
 samples/sample62.pl
 samples/sample63.pl
